--- a/grid.css
+++ b/grid.css
@@ -16,3 +16,23 @@
   margin-top: 10px;
 }
 
+.radio {
+  ;
+}
+
+.color-swatch {
+  border-radius: 3px;
+  margin: 0 5px;
+  width: 200px;
+  height: 30px;
+}
+
+.gray {
+  background-color: #555;
+}
+
+.white {
+  background-color: #FFF;
+  border: 1px solid #ccc;
+}
+
