--- a/grid.css
+++ b/grid.css
@@ -11,13 +11,16 @@
   margin-top: 30px;
 }
 
+.color-pallette {
+  margin-top: 30px;
+}
+
 .btn {
   display: block;
   margin-top: 10px;
 }
 
 .radio {
-  ;
 }
 
 .color-swatch {
