--- a/grid.css
+++ b/grid.css
@@ -12,7 +12,7 @@
   margin-top: 30px;
 }
 
-.color-pallette {
+.color-palette {
   margin-top: 30px;
 }
 
@@ -37,9 +37,20 @@
   border: 1px solid #ccc;
 }
 
-.form-control {
+.dimensions {
   display: inline;
   height: 40px;
   width: 65px;
 }
+
+.gauge {
+  display: inline;
+  height: 40px;
+  width: 65px;
+}
+
+.color-name {
+  height: 54px;
+}
+
 
