--- a/public/grid.css
+++ b/public/grid.css
@@ -21,22 +21,6 @@
   margin-top: 10px;
 }
 
-.color-swatch {
-  border-radius: 3px;
-  margin: 0 5px;
-  width: 200px;
-  height: 30px;
-}
-
-.gray {
-  background-color: #555;
-}
-
-.white {
-  background-color: #FFF;
-  border: 1px solid #ccc;
-}
-
 .dimensions {
   display: inline;
   height: 40px;
@@ -52,5 +36,17 @@
 .color-name {
   height: 54px;
 }
+
+.hr {
+  color: #CCC;
+  background: #555; 
+  width: 100%; 
+  height: 3px;
+}
+
+.radio {
+
+}
+
 
 
